<resources>
    <string name="app_name">MyStory</string>
    <string name="HintUserName">UserName</string>
    <string name="HintPass">Password</string>
    <string name="ButtonText">Login</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="checkText">I accept terms and condition</string>
    <string name="enter_title">Add title here</string>
    <string name="enter_subtitle">Add sub title here</string>
    <string name="add_button">Add story</string>
    <string name="add_description">Add Description</string>
</resources>